FontAwesome 4.0.3~core1

	* Update to the newest stable version of Font Awesome from upstream (4.0.3).
	* Add "icon-ok" to the list of compiled icons.
	* Add the "move" icon back in, alias of "bars".
	-- Charlie Powell <charlie@eval.bz>  Thu, 02 Jan 2014 11:03:42 -0500

FontAwesome 3.11~core2

	* Make use of the namespace versions of View instead of static.
	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:29:56 -0400

FontAwesome 3.11~core1

	* New upstream version.
	-- Charlie Powell <charlie@eval.bz>  Tue, 28 May 2013 19:12:12 -0400
