@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <!DOCTYPE component PUBLIC "SYSTEM" "http://corepl.us/api/2_4/component.dtd">
-<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="4.0.3~core1" name="FontAwesome" execmode="web">
+<component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="4.0.3~core2" name="FontAwesome" execmode="web">
 	<requires>
-		<require name="core" type="component" version="3.0.0" operation="ge"/>
+		<require name="core" type="component" version="3.4.0" operation="ge"/>
 	</requires>
 	<provides>
 		<scriptlibrary name="fontawesome" call="FontAwesome::Load"/>
@@ -13,16 +13,12 @@
 		This package contains the Core-optimized version of FA.
 	</description>
 	<files>
-		<file filename="CHANGELOG" md5="d4e7b3fefdfaa8b7b07a33a2b56be51f"/>
+		<file filename="CHANGELOG" md5="9199fa06c38763c404f5ce8149e9fb96"/>
 		<file filename="FontAwesome-Vectors.pdf" md5="cab0c66ed6cd83eec4d2e844619703b4"/>
 		<file filename="FontAwesome.lib.php" md5="0bd12edc9c443d9a1e5ad44828f0601a">
 			<class name="FontAwesome"/>
 		</file>
 		<file filename="README.md" md5="bcb91e0d16d1f010effa565d0c7980d2"/>
-	</files>
-	<assets>
-		<file filename="assets/CONTRIBUTING.md" md5="51163d4979d1e0371aab27b8d29ea4b9"/>
-		<file filename="assets/README.md" md5="deabcf1bd585dd4a6462173928247612"/>
 		<file filename="assets/css/_bordered-pulled.scss" md5="e4f85472a1f6ed0e23a473b8e00ef071"/>
 		<file filename="assets/css/_core.scss" md5="460139739224bc62d9957837978c4e22"/>
 		<file filename="assets/css/_extras.scss" md5="053aed1a3705922cea94741681034652"/>
@@ -37,9 +33,13 @@
 		<file filename="assets/css/_spinning.scss" md5="8e6c7988f40f123aedd96a668c56582a"/>
 		<file filename="assets/css/_stacked.scss" md5="5594237226aedfbca2fa1c7f4604c214"/>
 		<file filename="assets/css/_variables.scss" md5="9d4f23eacae6690aa140e51d42550e5b"/>
-		<file filename="assets/css/font-awesome.css" md5="92adf7e62d20e26d07c89a214266e973"/>
-		<file filename="assets/css/font-awesome.min.css" md5="7adf918320cc55bc88f63c6bbb51751a"/>
 		<file filename="assets/css/font-awesome.scss" md5="4201fdd32cc7a7d2f6ed2706800faf75"/>
+	</files>
+	<assets>
+		<file filename="assets/CONTRIBUTING.md" md5="51163d4979d1e0371aab27b8d29ea4b9"/>
+		<file filename="assets/README.md" md5="deabcf1bd585dd4a6462173928247612"/>
+		<file filename="assets/css/font-awesome.css" md5="9ac59a4227fbc8db8fb8bf88f0970c33"/>
+		<file filename="assets/css/font-awesome.min.css" md5="7adf918320cc55bc88f63c6bbb51751a"/>
 		<file filename="assets/fonts/FontAwesome.otf" md5="3f3a623e88cb5c62eaa2367195e98b67"/>
 		<file filename="assets/fonts/fontawesome-webfont.eot" md5="8b27bc96115c2d24350f0d09e6a9433f"/>
 		<file filename="assets/fonts/fontawesome-webfont.svg" md5="0a799148a50bb02c6f380eabd8d97559"/>
@@ -51,6 +51,7 @@
 		<upgrade from="2.0~core2" to="3.11~core1"/>
 		<upgrade from="3.11~core1" to="3.11~core2"/>
 		<upgrade from="3.11~core2" to="4.0.3~core1"/>
+		<upgrade from="4.0.3~core1" to="4.0.3~core2"/>
 	</upgrades>
 	<authors>
 		<author name="Dave Gandy" email="dave@davegandy.com"/>
